--- a/index.html
+++ b/index.html
@@ -22,6 +22,37 @@
     <meta property="og:type" content="website" />
   </head>
   <body>
+    <!-- HEADER -->
+    <div id="header" class="header-container">
+      <header>
+        <div class="logo">
+          <img src="/assets/svg/logo.svg" />
+        </div>
+        <nav id="nav">
+          <ul>
+            <li class="li-menu1">
+              <a class="underline" onclick="selectMenuItem()">Experience</a>
+            </li>
+            <li class="li-menu2">
+              <a class="underline" onclick="selectMenuItem()">Projects</a>
+            </li>
+            <li class="li-menu3">
+              <a class="underline" onclick="selectMenuItem()">About me</a>
+            </li>
+            <li class="li-menu4">
+              <a class="underline" onclick="selectMenuItem()">Contact</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="nav-responsive" onclick="showHideMenu()">
+          <input type="checkbox" role="button" class="menu" />
+        </div>
+      </header>
+    </div>
+    <div class="background"></div>
 
+    <!-- HOME -->
+
+    <section class="home"></section>
   </body>
 </html>
