--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
             </li>
           </ul>
         </nav>
-        <div class="nav-responsive" onclick="showHideMenu()">
-          <input type="checkbox" role="button" class="menu" />
-        </div>
+        <div class="hamburger-menu" >
+          <input id="menu-toggle" type="checkbox" onclick="showHideMenu()"/>
+          <label class="menu-button" for="menu-toggle">
+            <span></span>
+          </label>
       </header>
     </div>
     <div class="background"></div>
