--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@
   <body>
     <div class="background"></div>
 
-    <!-- HEADER -->
-
     <div id="header" class="header-container">
       <header>
         <div class="logo">
@@ -56,18 +54,16 @@
       </header>
     </div>
 
-    <!-- HOME -->
-
     <section class="home">
       <div class="home-text">
         <div class="info-image">
           <img src="/assets/img/laptop.png" alt="" />
         </div>
         <header class="info">
-          <h1 class="title">
+          <h1 class="info-title">
             Hey, <span class="purple">I'm Christian Franco</span>
           </h1>
-          <span class="subtitle">Back-End Developer</span>
+          <span class="info-subtitle">Back-End Developer</span>
           <h2 class="info-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum
             eget mollis dolor, quis molestie metus. Morbi sed auctor ex,
@@ -139,8 +135,107 @@
           >
         </li>
       </ul>
-      <div class="scroll-down"></div>
     </section>
-    
+
+    <section class="experience">
+      <h2 class="experience-title title">Work experience</h2>
+      <article class="experience-container">
+        <ul class="experience-list">
+          <li>
+            <span class="experience-icon"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                x="0px"
+                y="0px"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="rgb(222 243 255)"
+              >
+                <path
+                  d="M 10 3 A 1.0001 1.0001 0 0 0 8.9863281 4 L 4 4 C 2.895 4 2 4.895 2 6 L 2 12 C 2 13.103 2.897 14 4 14 L 20 14 C 21.103 14 22 13.103 22 12 L 22 6 C 22 4.895 21.105 4 20 4 L 15.013672 4 A 1.0001 1.0001 0 0 0 14 3 L 10 3 z M 12 10 C 12.552 10 13 10.448 13 11 C 13 11.552 12.552 12 12 12 C 11.448 12 11 11.552 11 11 C 11 10.448 11.448 10 12 10 z M 2 15.443359 L 2 18 C 2 19.105 2.895 20 4 20 L 20 20 C 21.105 20 22 19.105 22 18 L 22 15.443359 C 21.409 15.787359 20.732 16 20 16 L 4 16 C 3.268 16 2.591 15.787359 2 15.443359 z"
+                ></path>
+              </svg>
+            </span>
+            <div class="experience-info">
+              <div class="left-info">
+                <div class="left-container">
+                  <h3>BackEnd Developer</h3>
+                  <h4>Prueba SL</h4>
+                  <span class="time">Agosto 2023 - Presente</span>
+                </div>
+              </div>
+              <div class="right-info">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Vestibulum eget mollis dolor, quis molestie metus. Morbi sed
+                auctor ex, hendrerit pulvinar massa.
+              </div>
+            </div>
+          </li>
+          <li>
+            <span class="experience-icon"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                x="0px"
+                y="0px"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="rgb(222 243 255)"
+              >
+                <path
+                  d="M 10 3 A 1.0001 1.0001 0 0 0 8.9863281 4 L 4 4 C 2.895 4 2 4.895 2 6 L 2 12 C 2 13.103 2.897 14 4 14 L 20 14 C 21.103 14 22 13.103 22 12 L 22 6 C 22 4.895 21.105 4 20 4 L 15.013672 4 A 1.0001 1.0001 0 0 0 14 3 L 10 3 z M 12 10 C 12.552 10 13 10.448 13 11 C 13 11.552 12.552 12 12 12 C 11.448 12 11 11.552 11 11 C 11 10.448 11.448 10 12 10 z M 2 15.443359 L 2 18 C 2 19.105 2.895 20 4 20 L 20 20 C 21.105 20 22 19.105 22 18 L 22 15.443359 C 21.409 15.787359 20.732 16 20 16 L 4 16 C 3.268 16 2.591 15.787359 2 15.443359 z"
+                ></path>
+              </svg>
+            </span>
+            <div class="experience-info">
+              <div class="left-info">
+                <div class="left-container">
+                  <h3>BackEnd Developer</h3>
+                  <h4>Prueba SL</h4>
+                  <span class="time">Agosto 2023 - Presente</span>
+                </div>
+              </div>
+              <div class="right-info">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Vestibulum eget mollis dolor, quis molestie metus. Morbi sed
+                auctor ex, hendrerit pulvinar massa.
+              </div>
+            </div>
+          </li>
+          <li>
+            <span class="experience-icon"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                x="0px"
+                y="0px"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="rgb(222 243 255)"
+              >
+                <path
+                  d="M 10 3 A 1.0001 1.0001 0 0 0 8.9863281 4 L 4 4 C 2.895 4 2 4.895 2 6 L 2 12 C 2 13.103 2.897 14 4 14 L 20 14 C 21.103 14 22 13.103 22 12 L 22 6 C 22 4.895 21.105 4 20 4 L 15.013672 4 A 1.0001 1.0001 0 0 0 14 3 L 10 3 z M 12 10 C 12.552 10 13 10.448 13 11 C 13 11.552 12.552 12 12 12 C 11.448 12 11 11.552 11 11 C 11 10.448 11.448 10 12 10 z M 2 15.443359 L 2 18 C 2 19.105 2.895 20 4 20 L 20 20 C 21.105 20 22 19.105 22 18 L 22 15.443359 C 21.409 15.787359 20.732 16 20 16 L 4 16 C 3.268 16 2.591 15.787359 2 15.443359 z"
+                ></path>
+              </svg>
+            </span>
+            <div class="experience-info">
+              <div class="left-info">
+                <div class="left-container">
+                  <h3>BackEnd Developer</h3>
+                  <h4>Prueba SL</h4>
+                  <span class="time">Agosto 2023 - Presente</span>
+                </div>
+              </div>
+              <div class="right-info">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Vestibulum eget mollis dolor, quis molestie metus. Morbi sed
+                auctor ex, hendrerit pulvinar massa.
+              </div>
+            </div>
+          </li>
+        </ul>
+      </article>
+    </section>
   </body>
 </html>
