--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           <img src="/assets/svg/logo.svg" />
         </div>
         <nav id="nav">
+          <!-- TODO: Buttons redirect -->
           <ul>
             <li class="li-menu1">
               <a class="underline" onclick="selectMenuItem()">Experience</a>
@@ -65,6 +66,7 @@
           </h1>
           <span class="info-subtitle">Back-End Developer</span>
           <h2 class="info-text">
+            <!-- TODO: Change home text -->
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum
             eget mollis dolor, quis molestie metus. Morbi sed auctor ex,
             hendrerit pulvinar massa.
@@ -129,7 +131,8 @@
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="cv">
+              <!-- TODO: Redirect to CV.pdf -->
               <a
                 href="https://www.linkedin.com/in/christian-franco-soto/"
                 target="_blank"
@@ -144,38 +147,8 @@
     <section class="experience section">
       <h2 class="experience-title title">Work experience</h2>
       <article class="experience-container">
+        <!-- TODO: Change all experience mockup info -->
         <ul class="experience-list">
-          <li>
-            <span class="experience-icon"
-              ><svg
-                xmlns="http://www.w3.org/2000/svg"
-                x="0px"
-                y="0px"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="rgb(222 243 255)"
-              >
-                <path
-                  d="M 10 3 A 1.0001 1.0001 0 0 0 8.9863281 4 L 4 4 C 2.895 4 2 4.895 2 6 L 2 12 C 2 13.103 2.897 14 4 14 L 20 14 C 21.103 14 22 13.103 22 12 L 22 6 C 22 4.895 21.105 4 20 4 L 15.013672 4 A 1.0001 1.0001 0 0 0 14 3 L 10 3 z M 12 10 C 12.552 10 13 10.448 13 11 C 13 11.552 12.552 12 12 12 C 11.448 12 11 11.552 11 11 C 11 10.448 11.448 10 12 10 z M 2 15.443359 L 2 18 C 2 19.105 2.895 20 4 20 L 20 20 C 21.105 20 22 19.105 22 18 L 22 15.443359 C 21.409 15.787359 20.732 16 20 16 L 4 16 C 3.268 16 2.591 15.787359 2 15.443359 z"
-                ></path>
-              </svg>
-            </span>
-            <div class="experience-info">
-              <div class="left-info">
-                <div class="left-container">
-                  <h3>BackEnd Developer</h3>
-                  <h4>Prueba SL</h4>
-                  <span class="time">Agosto 2023 - Presente</span>
-                </div>
-              </div>
-              <div class="right-info">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Vestibulum eget mollis dolor, quis molestie metus. Morbi sed
-                auctor ex, hendrerit pulvinar massa.
-              </div>
-            </div>
-          </li>
           <li>
             <span class="experience-icon"
               ><svg
@@ -241,5 +214,225 @@
         </ul>
       </article>
     </section>
+
+    <section class="projects section">
+      <h2 class="projects-title title">Projects</h2>
+      <!-- TODO: Change all projects mockup info -->
+      <div class="project-list">
+        <article class="project">
+          <div class="project-info project-info-right">
+            <h3 class="project-title">ShortSnap - Url shortener</h3>
+            <div class="project-container">
+              <ul class="project-stack">
+                <li>
+                  <span> C#</span>
+                </li>
+                <li>
+                  <span> Angular</span>
+                </li>
+              </ul>
+              <div class="project-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Vestibulum eget mollis dolor, quis molestie metus. Morbi sed
+                auctor ex, hendrerit pulvinar massa.
+              </div>
+              <footer class="project-buttons">
+                <a href=""
+                  ><svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    x="0px"
+                    y="0px"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 48 48"
+                    fill="white"
+                  >
+                    <path
+                      d="M 40.960938 4.9804688 A 2.0002 2.0002 0 0 0 40.740234 5 L 28 5 A 2.0002 2.0002 0 1 0 28 9 L 36.171875 9 L 22.585938 22.585938 A 2.0002 2.0002 0 1 0 25.414062 25.414062 L 39 11.828125 L 39 20 A 2.0002 2.0002 0 1 0 43 20 L 43 7.2460938 A 2.0002 2.0002 0 0 0 40.960938 4.9804688 z M 12.5 8 C 8.3826878 8 5 11.382688 5 15.5 L 5 35.5 C 5 39.617312 8.3826878 43 12.5 43 L 32.5 43 C 36.617312 43 40 39.617312 40 35.5 L 40 26 A 2.0002 2.0002 0 1 0 36 26 L 36 35.5 C 36 37.446688 34.446688 39 32.5 39 L 12.5 39 C 10.553312 39 9 37.446688 9 35.5 L 9 15.5 C 9 13.553312 10.553312 12 12.5 12 L 22 12 A 2.0002 2.0002 0 1 0 22 8 L 12.5 8 z"
+                    ></path>
+                  </svg>
+                  Preview</a
+                >
+                <a href=""
+                  ><svg
+                    class="size-6"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    stroke-width="2"
+                    stroke="currentColor"
+                    fill="none"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  >
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                    <path
+                      d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"
+                    ></path>
+                  </svg>
+                  Code</a
+                >
+              </footer>
+            </div>
+          </div>
+          <div class="project-img">
+            <div class="img-border">
+              <img src="/assets/img/fondo.webp" alt="" />
+            </div>
+          </div>
+        </article>
+
+        <article class="project">
+          <div class="project-info project-info-right">
+            <h3 class="project-title">ShortSnap - Url shortener</h3>
+            <div class="project-container">
+              <ul class="project-stack">
+                <li>
+                  <span> C#</span>
+                </li>
+                <li>
+                  <span> Angular</span>
+                </li>
+              </ul>
+              <div class="project-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Vestibulum eget mollis dolor, quis molestie metus. Morbi sed
+                auctor ex, hendrerit pulvinar massa.
+              </div>
+              <footer class="project-buttons">
+                <a href=""
+                  ><svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    x="0px"
+                    y="0px"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 48 48"
+                    fill="white"
+                  >
+                    <path
+                      d="M 40.960938 4.9804688 A 2.0002 2.0002 0 0 0 40.740234 5 L 28 5 A 2.0002 2.0002 0 1 0 28 9 L 36.171875 9 L 22.585938 22.585938 A 2.0002 2.0002 0 1 0 25.414062 25.414062 L 39 11.828125 L 39 20 A 2.0002 2.0002 0 1 0 43 20 L 43 7.2460938 A 2.0002 2.0002 0 0 0 40.960938 4.9804688 z M 12.5 8 C 8.3826878 8 5 11.382688 5 15.5 L 5 35.5 C 5 39.617312 8.3826878 43 12.5 43 L 32.5 43 C 36.617312 43 40 39.617312 40 35.5 L 40 26 A 2.0002 2.0002 0 1 0 36 26 L 36 35.5 C 36 37.446688 34.446688 39 32.5 39 L 12.5 39 C 10.553312 39 9 37.446688 9 35.5 L 9 15.5 C 9 13.553312 10.553312 12 12.5 12 L 22 12 A 2.0002 2.0002 0 1 0 22 8 L 12.5 8 z"
+                    ></path>
+                  </svg>
+                  Preview</a
+                >
+                <a href=""
+                  ><svg
+                    class="size-6"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    stroke-width="2"
+                    stroke="currentColor"
+                    fill="none"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  >
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                    <path
+                      d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"
+                    ></path>
+                  </svg>
+                  Code</a
+                >
+              </footer>
+            </div>
+          </div>
+          <div class="project-img">
+            <div class="img-border">
+              <img src="/assets/img/fondo.webp" alt="" />
+            </div>
+          </div>
+        </article>
+
+        <article class="project">
+          <div class="project-info project-info-right">
+            <h3 class="project-title">ShortSnap - Url shortener</h3>
+            <div class="project-container">
+              <ul class="project-stack">
+                <li>
+                  <span> C#</span>
+                </li>
+                <li>
+                  <span> Angular</span>
+                </li>
+              </ul>
+              <div class="project-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Vestibulum eget mollis dolor, quis molestie metus. Morbi sed
+                auctor ex, hendrerit pulvinar massa.
+              </div>
+              <footer class="project-buttons">
+                <a href=""
+                  ><svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    x="0px"
+                    y="0px"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 48 48"
+                    fill="white"
+                  >
+                    <path
+                      d="M 40.960938 4.9804688 A 2.0002 2.0002 0 0 0 40.740234 5 L 28 5 A 2.0002 2.0002 0 1 0 28 9 L 36.171875 9 L 22.585938 22.585938 A 2.0002 2.0002 0 1 0 25.414062 25.414062 L 39 11.828125 L 39 20 A 2.0002 2.0002 0 1 0 43 20 L 43 7.2460938 A 2.0002 2.0002 0 0 0 40.960938 4.9804688 z M 12.5 8 C 8.3826878 8 5 11.382688 5 15.5 L 5 35.5 C 5 39.617312 8.3826878 43 12.5 43 L 32.5 43 C 36.617312 43 40 39.617312 40 35.5 L 40 26 A 2.0002 2.0002 0 1 0 36 26 L 36 35.5 C 36 37.446688 34.446688 39 32.5 39 L 12.5 39 C 10.553312 39 9 37.446688 9 35.5 L 9 15.5 C 9 13.553312 10.553312 12 12.5 12 L 22 12 A 2.0002 2.0002 0 1 0 22 8 L 12.5 8 z"
+                    ></path>
+                  </svg>
+                  Preview</a
+                >
+                <a href=""
+                  ><svg
+                    class="size-6"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    stroke-width="2"
+                    stroke="currentColor"
+                    fill="none"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  >
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                    <path
+                      d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"
+                    ></path>
+                  </svg>
+                  Code</a
+                >
+              </footer>
+            </div>
+          </div>
+          <div class="project-img">
+            <div class="img-border">
+              <img src="/assets/img/fondo.webp" alt="" />
+            </div>
+          </div>
+        </article>
+      </div>
+      <div class="more-projects">
+        <a href="" class="more-container underline">
+          More
+          <svg
+            width="14"
+            height="14"
+            stroke="#111"
+            stroke-width="3"
+            class="lucide-icon lucide lucide-arrow-right opacity-70 duration-200 group-hover:translate-x-[2px] group-hover:opacity-100"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path d="M5 12h14"></path>
+            <path d="m12 5 7 7-7 7"></path>
+          </svg>
+        </a>
+      </div>
+    </section>
+
+    <section style="height: 100vh"></section>
   </body>
 </html>
