Added language change

--- a/es.html
+++ b/es.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script src="script.js"></script>
   </head>
   <body>
     <!-- TODO: Create spanish page -->
     <p>HOLA</p>
+    <a class="underline pad-bottom" href="/"> Esp </a>
+    <select id="language-selector" onchange="changeLanguage()">
+      <option value="es" selected>Español</option>
+      <option value="en">Inglés</option>
+    </select>
   </body>
 </html>
