Create more projects page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       sizes="any"
     />
     <title>Christian Franco</title>
+    <!-- TODO: Add meta tags -->
+    <!-- TODO: Generate Lighthouse report and fix problems -->
+    <!-- TODO: Remove .html from url path -->
     <meta name="description" content="" />
     <meta property="og:title" content="Christian Franco" />
     <meta property="og:description" content="" />
@@ -23,8 +26,6 @@
   </head>
   <body>
     <div class="background"></div>
-
-    <!-- TODO: Generate Lighthouse report and fix problems -->
 
     <div id="header" class="header-container">
       <header>
@@ -431,8 +432,7 @@
                 and track URL clicks.
               </div>
               <footer class="project-buttons">
-                <!-- TODO: Add ShortSnap links -->
-                <a href="">
+                <a class="preview" href="https://shortsnap.vercel.app/" target="_blank">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     x="0px"
@@ -448,7 +448,7 @@
                   </svg>
                   Preview
                 </a>
-                <a href="">
+                <a class="code" href="https://github.com/c-franco/shortsnap" target="_blank">
                   <svg
                     class="size-6"
                     xmlns="http://www.w3.org/2000/svg"
@@ -511,7 +511,7 @@
                 components or whatever you need.
               </div>
               <footer class="project-buttons">
-                <a
+                <a class="preview"
                   href="https://marketplace.visualstudio.com/items?itemName=Breathink.css-storage"
                   target="_blank"
                 >
@@ -530,7 +530,7 @@
                   </svg>
                   Preview
                 </a>
-                <a
+                <a class="code"
                   href="https://github.com/c-franco/css-storage-extension"
                   target="_blank"
                 >
@@ -627,7 +627,7 @@
                 Avalaible on Google Play Store.
               </div>
               <footer class="project-buttons">
-                <a
+                <a class="preview"
                   href="https://play.google.com/store/apps/details?id=com.breathink.linkvault"
                   target="_blank"
                 >
@@ -646,7 +646,7 @@
                   </svg>
                   Preview
                 </a>
-                <a
+                <a class="code"
                   href="https://github.com/c-franco/link-vault"
                   target="_blank"
                 >
