--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <div class="left-container">
                   <h3>Full-Stack Developer</h3>
                   <h4>Inorca</h4>
-                  <span class="time">August 2023 - Currently</span>
+                  <span class="time">August 2023 - Current</span>
                 </div>
               </div>
               <div class="right-info">
@@ -432,7 +432,11 @@
                 and track URL clicks.
               </div>
               <footer class="project-buttons">
-                <a class="preview" href="https://shortsnap.vercel.app/" target="_blank">
+                <a
+                  class="preview"
+                  href="https://shortsnap.vercel.app/"
+                  target="_blank"
+                >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     x="0px"
@@ -446,9 +450,13 @@
                       d="M 40.960938 4.9804688 A 2.0002 2.0002 0 0 0 40.740234 5 L 28 5 A 2.0002 2.0002 0 1 0 28 9 L 36.171875 9 L 22.585938 22.585938 A 2.0002 2.0002 0 1 0 25.414062 25.414062 L 39 11.828125 L 39 20 A 2.0002 2.0002 0 1 0 43 20 L 43 7.2460938 A 2.0002 2.0002 0 0 0 40.960938 4.9804688 z M 12.5 8 C 8.3826878 8 5 11.382688 5 15.5 L 5 35.5 C 5 39.617312 8.3826878 43 12.5 43 L 32.5 43 C 36.617312 43 40 39.617312 40 35.5 L 40 26 A 2.0002 2.0002 0 1 0 36 26 L 36 35.5 C 36 37.446688 34.446688 39 32.5 39 L 12.5 39 C 10.553312 39 9 37.446688 9 35.5 L 9 15.5 C 9 13.553312 10.553312 12 12.5 12 L 22 12 A 2.0002 2.0002 0 1 0 22 8 L 12.5 8 z"
                     ></path>
                   </svg>
-                  Preview
+                  Demo
                 </a>
-                <a class="code" href="https://github.com/c-franco/shortsnap" target="_blank">
+                <a
+                  class="code"
+                  href="https://github.com/c-franco/shortsnap"
+                  target="_blank"
+                >
                   <svg
                     class="size-6"
                     xmlns="http://www.w3.org/2000/svg"
@@ -506,12 +514,13 @@
                 </li>
               </ul>
               <div class="project-text">
-                Extension that allows you to save css selectors for reuse in any
+                Extension that allows you to save CSS selectors for reuse in any
                 project. Useful for storing media queries, animations, reusable
                 components or whatever you need.
               </div>
               <footer class="project-buttons">
-                <a class="preview"
+                <a
+                  class="preview"
                   href="https://marketplace.visualstudio.com/items?itemName=Breathink.css-storage"
                   target="_blank"
                 >
@@ -528,9 +537,10 @@
                       d="M 40.960938 4.9804688 A 2.0002 2.0002 0 0 0 40.740234 5 L 28 5 A 2.0002 2.0002 0 1 0 28 9 L 36.171875 9 L 22.585938 22.585938 A 2.0002 2.0002 0 1 0 25.414062 25.414062 L 39 11.828125 L 39 20 A 2.0002 2.0002 0 1 0 43 20 L 43 7.2460938 A 2.0002 2.0002 0 0 0 40.960938 4.9804688 z M 12.5 8 C 8.3826878 8 5 11.382688 5 15.5 L 5 35.5 C 5 39.617312 8.3826878 43 12.5 43 L 32.5 43 C 36.617312 43 40 39.617312 40 35.5 L 40 26 A 2.0002 2.0002 0 1 0 36 26 L 36 35.5 C 36 37.446688 34.446688 39 32.5 39 L 12.5 39 C 10.553312 39 9 37.446688 9 35.5 L 9 15.5 C 9 13.553312 10.553312 12 12.5 12 L 22 12 A 2.0002 2.0002 0 1 0 22 8 L 12.5 8 z"
                     ></path>
                   </svg>
-                  Preview
+                  Demo
                 </a>
-                <a class="code"
+                <a
+                  class="code"
                   href="https://github.com/c-franco/css-storage-extension"
                   target="_blank"
                 >
@@ -627,7 +637,8 @@
                 Avalaible on Google Play Store.
               </div>
               <footer class="project-buttons">
-                <a class="preview"
+                <a
+                  class="preview"
                   href="https://play.google.com/store/apps/details?id=com.breathink.linkvault"
                   target="_blank"
                 >
@@ -644,9 +655,10 @@
                       d="M 40.960938 4.9804688 A 2.0002 2.0002 0 0 0 40.740234 5 L 28 5 A 2.0002 2.0002 0 1 0 28 9 L 36.171875 9 L 22.585938 22.585938 A 2.0002 2.0002 0 1 0 25.414062 25.414062 L 39 11.828125 L 39 20 A 2.0002 2.0002 0 1 0 43 20 L 43 7.2460938 A 2.0002 2.0002 0 0 0 40.960938 4.9804688 z M 12.5 8 C 8.3826878 8 5 11.382688 5 15.5 L 5 35.5 C 5 39.617312 8.3826878 43 12.5 43 L 32.5 43 C 36.617312 43 40 39.617312 40 35.5 L 40 26 A 2.0002 2.0002 0 1 0 36 26 L 36 35.5 C 36 37.446688 34.446688 39 32.5 39 L 12.5 39 C 10.553312 39 9 37.446688 9 35.5 L 9 15.5 C 9 13.553312 10.553312 12 12.5 12 L 22 12 A 2.0002 2.0002 0 1 0 22 8 L 12.5 8 z"
                     ></path>
                   </svg>
-                  Preview
+                  Demo
                 </a>
-                <a class="code"
+                <a
+                  class="code"
                   href="https://github.com/c-franco/link-vault"
                   target="_blank"
                 >
@@ -1137,10 +1149,10 @@
     <section class="footer section">
       <div class="footer-container">
         <span id="year"
-          >@ <span id="currentYear">2024</span>
+          >© <span id="currentYear">2024 - </span>
           <a href="https://christianfranco.dev" target="_blank"
             >Christian Franco</a
-          >.</span
+          ></span
         >
         <ul class="footer-list">
           <li>
