Create spanish projects version

--- a/es.html
+++ b/es.html
@@ -683,7 +683,7 @@
         </article>
       </div>
       <div class="more-projects">
-        <a href="/projects.html" class="more-container underline">
+        <a href="/proyectos.html" class="more-container underline">
           Ver más
           <svg
             width="14"
