Remove .html in path

--- a/es.html
+++ b/es.html
@@ -683,7 +683,7 @@
         </article>
       </div>
       <div class="more-projects">
-        <a href="/proyectos.html" class="more-container underline">
+        <a href="/proyectos" class="more-container underline">
           Ver más
           <svg
             width="14"
@@ -1141,9 +1141,7 @@
       <div class="footer-container">
         <span id="year"
           >© <span id="currentYear">2024 - </span>
-          <a href="https://christianfranco.dev" target="_blank"
-            >Christian Franco</a
-          ></span
+          <a href="https://christianfranco.dev">Christian Franco</a></span
         >
         <ul class="footer-list">
           <li>
