--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
               <div id="language-options">
                 <a><span class="purple">English</span></a>
                 <span class="separator"></span>
-                <a href="/proyectos.html" onclick="changeLanguage('es')"
+                <a href="/proyectos" onclick="changeLanguage('es')"
                   ><span>Spanish</span></a
                 >
               </div>
@@ -655,7 +655,7 @@
       <div class="footer-container">
         <span id="year"
           >© <span id="currentYear">2024 - </span>
-          <a href="https://christianfranco.dev" target="_blank"
+          <a href="https://christianfranco.dev"
             >Christian Franco</a
           ></span
         >
