--- a/proyectos.html
+++ b/proyectos.html
@@ -28,7 +28,7 @@
         <nav id="nav">
           <ul>
             <li>
-              <a class="underline pad-bottom" onclick="redirect('/es.html')"
+              <a class="underline pad-bottom" onclick="redirect('/es')"
                 >Portfolio</a
               >
             </li>
@@ -47,7 +47,7 @@
               <div id="language-options">
                 <a><span class="purple">Español</span></a>
                 <span class="separator"></span>
-                <a href="/projects.html" onclick="changeLanguage('en')"
+                <a href="/projects" onclick="changeLanguage('en')"
                   ><span>Inglés</span></a
                 >
               </div>
@@ -655,7 +655,7 @@
       <div class="footer-container">
         <span id="year"
           >© <span id="currentYear">2024 - </span>
-          <a href="https://christianfranco.dev" target="_blank"
+          <a href="https://christianfranco.dev"
             >Christian Franco</a
           ></span
         >
