--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 >About me</a
               >
             </li>
+            <!-- TODO: Hover animation -->
             <li class="change-language" onclick="showLanguageMenu()">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -74,7 +75,7 @@
               <div id="language-options">
                 <a><span class="purple">English</span></a>
                 <span class="separator"></span>
-                <a href="/es.html" onclick="changeLanguage('es')"
+                <a href="/es" onclick="changeLanguage('es')"
                   ><span>Spanish</span></a
                 >
               </div>
@@ -692,7 +693,7 @@
         </article>
       </div>
       <div class="more-projects">
-        <a href="/projects.html" class="more-container underline">
+        <a href="/projects" class="more-container underline">
           More
           <svg
             width="14"
@@ -1150,7 +1151,7 @@
       <div class="footer-container">
         <span id="year"
           >© <span id="currentYear">2024 - </span>
-          <a href="https://christianfranco.dev" target="_blank"
+          <a href="https://christianfranco.dev"
             >Christian Franco</a
           ></span
         >
