Fix 'Proyectos.html' urls

--- a/es.html
+++ b/es.html
@@ -683,7 +683,7 @@
         </article>
       </div>
       <div class="more-projects">
-        <a href="/es/proyectos" class="more-container underline">
+        <a href="/proyectos" class="more-container underline">
           Ver más
           <svg
             width="14"
