--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
               <div id="language-options">
                 <a><span class="purple">English</span></a>
                 <span class="separator"></span>
-                <a href="/es/proyectos" onclick="changeLanguage('es')"
+                <a href="/proyectos" onclick="changeLanguage('es')"
                   ><span>Spanish</span></a
                 >
               </div>
