--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <ul>
             <li>
               <a
+                href="#experience"
                 class="underline pad-bottom"
                 onclick="selectMenuItem('experience')"
                 >Experience</a
@@ -46,6 +47,7 @@
             </li>
             <li>
               <a
+                href="#projects"
                 class="underline pad-bottom"
                 onclick="selectMenuItem('projects')"
                 >Projects</a
@@ -53,23 +55,26 @@
             </li>
             <li>
               <a
+                href="#about-me"
                 class="underline pad-bottom"
                 onclick="selectMenuItem('about-me')"
                 >About me</a
               >
             </li>
             <li class="change-language" onclick="showLanguageMenu()">
-              <div class="lang-hover"><svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 16 16"
-                aria-hidden="true"
-                role="presentation"
-                focusable="false"
-              >
-                <path
-                  d="M8 .25a7.77 7.77 0 0 1 7.75 7.78 7.75 7.75 0 0 1-7.52 7.72h-.25A7.75 7.75 0 0 1 .25 8.24v-.25A7.75 7.75 0 0 1 8 .25zm1.95 8.5h-3.9c.15 2.9 1.17 5.34 1.88 5.5H8c.68 0 1.72-2.37 1.93-5.23zm4.26 0h-2.76c-.09 1.96-.53 3.78-1.18 5.08A6.26 6.26 0 0 0 14.17 9zm-9.67 0H1.8a6.26 6.26 0 0 0 3.94 5.08 12.59 12.59 0 0 1-1.16-4.7l-.03-.38zm1.2-6.58-.12.05a6.26 6.26 0 0 0-3.83 5.03h2.75c.09-1.83.48-3.54 1.06-4.81zm2.25-.42c-.7 0-1.78 2.51-1.94 5.5h3.9c-.15-2.9-1.18-5.34-1.89-5.5h-.07zm2.28.43.03.05a12.95 12.95 0 0 1 1.15 5.02h2.75a6.28 6.28 0 0 0-3.93-5.07z"
-                ></path>
-              </svg></div>
+              <div class="lang-hover">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 16 16"
+                  aria-hidden="true"
+                  role="presentation"
+                  focusable="false"
+                >
+                  <path
+                    d="M8 .25a7.77 7.77 0 0 1 7.75 7.78 7.75 7.75 0 0 1-7.52 7.72h-.25A7.75 7.75 0 0 1 .25 8.24v-.25A7.75 7.75 0 0 1 8 .25zm1.95 8.5h-3.9c.15 2.9 1.17 5.34 1.88 5.5H8c.68 0 1.72-2.37 1.93-5.23zm4.26 0h-2.76c-.09 1.96-.53 3.78-1.18 5.08A6.26 6.26 0 0 0 14.17 9zm-9.67 0H1.8a6.26 6.26 0 0 0 3.94 5.08 12.59 12.59 0 0 1-1.16-4.7l-.03-.38zm1.2-6.58-.12.05a6.26 6.26 0 0 0-3.83 5.03h2.75c.09-1.83.48-3.54 1.06-4.81zm2.25-.42c-.7 0-1.78 2.51-1.94 5.5h3.9c-.15-2.9-1.18-5.34-1.89-5.5h-.07zm2.28.43.03.05a12.95 12.95 0 0 1 1.15 5.02h2.75a6.28 6.28 0 0 0-3.93-5.07z"
+                  ></path>
+                </svg>
+              </div>
               <div id="language-options">
                 <a><span class="purple">English</span></a>
                 <span class="separator"></span>
@@ -81,7 +86,12 @@
           </ul>
         </nav>
         <div class="hamburger-menu">
-          <input id="menu-toggle" type="checkbox" onclick="showHideMenu()" />
+          <input
+            id="menu-toggle"
+            type="checkbox"
+            onclick="showHideMenu()"
+            aria-label="Menu toggle"
+          />
           <label class="menu-button" for="menu-toggle">
             <span></span>
           </label>
@@ -107,6 +117,7 @@
           <ul class="social-media">
             <li>
               <a
+                aria-label="LinkedIn profile"
                 href="https://www.linkedin.com/in/christian-franco-soto/"
                 target="_blank"
               >
@@ -126,7 +137,11 @@
               </a>
             </li>
             <li>
-              <a href="https://github.com/c-franco" target="_blank">
+              <a
+                href="https://github.com/c-franco"
+                target="_blank"
+                aria-label="GitHub profile"
+              >
                 <svg
                   viewBox="0 0 256 250"
                   width="256"
@@ -142,7 +157,11 @@
               </a>
             </li>
             <li>
-              <a href="mailto:christianfrancosoto@gmail.com" target="_blank">
+              <a
+                href="mailto:christianfrancosoto@gmail.com"
+                target="_blank"
+                aria-label="Mail me"
+              >
                 <svg
                   class="size-4"
                   xmlns="http://www.w3.org/2000/svg"
@@ -691,7 +710,11 @@
         </article>
       </div>
       <div class="more-projects">
-        <a href="/projects" class="more-container underline">
+        <a
+          href="/projects"
+          class="more-container underline"
+          aria-label="View more projects"
+        >
           More
           <svg
             width="14"
@@ -1149,13 +1172,12 @@
       <div class="footer-container">
         <span id="year"
           >© <span id="currentYear">2024 - </span>
-          <a href="https://christianfranco.dev"
-            >Christian Franco</a
-          ></span
+          <a href="https://christianfranco.dev">Christian Franco</a></span
         >
         <ul class="footer-list">
           <li>
             <a
+              aria-label="LinkedIn profile"
               href="https://www.linkedin.com/in/christian-franco-soto/"
               target="_blank"
             >
@@ -1176,7 +1198,11 @@
             </a>
           </li>
           <li>
-            <a href="https://github.com/c-franco" target="_blank">
+            <a
+              href="https://github.com/c-franco"
+              target="_blank"
+              aria-label="GitHub profile"
+            >
               <svg
                 class="git"
                 viewBox="0 0 256 250"
@@ -1193,7 +1219,11 @@
             </a>
           </li>
           <li>
-            <a href="mailto:christianfrancosoto@gmail.com" target="_blank">
+            <a
+              href="mailto:christianfrancosoto@gmail.com"
+              target="_blank"
+              aria-label="Mail me"
+            >
               <svg
                 class="size-4 mail"
                 xmlns="http://www.w3.org/2000/svg"
