--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,12 @@
           </ul>
         </nav>
         <div class="hamburger-menu">
-          <input id="menu-toggle" type="checkbox" onclick="showHideMenu()" />
+          <input
+            id="menu-toggle"
+            type="checkbox"
+            onclick="showHideMenu()"
+            aria-label="Menu toggle"
+          />
           <label class="menu-button" for="menu-toggle">
             <span></span>
           </label>
