--- a/proyectos.html
+++ b/proyectos.html
@@ -55,7 +55,12 @@
           </ul>
         </nav>
         <div class="hamburger-menu">
-          <input id="menu-toggle" type="checkbox" onclick="showHideMenu()" />
+          <input
+            id="menu-toggle"
+            type="checkbox"
+            onclick="showHideMenu()"
+            aria-label="Alternar menú"
+          />
           <label class="menu-button" for="menu-toggle">
             <span></span>
           </label>
@@ -655,9 +660,7 @@
       <div class="footer-container">
         <span id="year"
           >© <span id="currentYear">2024 - </span>
-          <a href="https://christianfranco.dev"
-            >Christian Franco</a
-          ></span
+          <a href="https://christianfranco.dev">Christian Franco</a></span
         >
         <ul class="footer-list">
           <li>
