--- a/es.html
+++ b/es.html
@@ -12,7 +12,15 @@
       sizes="any"
     />
     <title>Christian Franco</title>
-    <!-- TODO: Add meta tags -->
+    <meta name="description" content="Desarrollador full-stack. +2 años de experiencia en desarrollo de software." />
+    <meta name="author" content="Christian Franco">
+    <meta property="og:title" content="Christian Franco" />
+    <meta property="og:description" content="Desarrollador full-stack. +2 años de experiencia en desarrollo de software." />
+    <meta property="og:url" content="https://christianfranco.dev/" />
+    <meta property="og:site_name" content="Christian Franco" />
+    <meta property="og:image" content="https://christianfranco.dev/assets/img/og-image.png" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:image" content="https://christianfranco.dev/assets/img/og-image.png">
   </head>
   <body>
     <div class="background"></div>
