--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
       sizes="any"
     />
     <title>Christian Franco</title>
-    <!-- TODO: Add meta tags -->
-    <meta name="description" content="" />
+    <meta name="description" content="Full-stack developer based in Spain. +2 years of experience in software development." />
+    <meta name="author" content="Christian Franco">
     <meta property="og:title" content="Christian Franco" />
-    <meta property="og:description" content="" />
+    <meta property="og:description" content="Full-stack developer based in Spain. +2 years of experience in software development." />
     <meta property="og:url" content="https://christianfranco.dev/" />
-    <meta property="og:site_name" content="christianfranco.dev" />
-    <meta property="og:locale" content="en_EN" />
-    <meta property="og:image" content="" />
+    <meta property="og:site_name" content="Christian Franco" />
+    <meta property="og:image" content="https://christianfranco.dev/assets/img/og-image.png" />
     <meta property="og:type" content="website" />
+    <meta name="twitter:image" content="https://christianfranco.dev/assets/img/og-image.png">
   </head>
   <body>
     <div class="background"></div>
